src/components/css/header-bar.css
@import url('https://fonts.googleapis.com/css?family=Lato|Monofett');
@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
@import url('https://fonts.googleapis.com/css?family=Bitter:700');

.content-header {
	margin-left: 10px; /* Same as the width of the sidenav */
	padding: 0px 10px;

}

.content-header a {
text-decoration: none;
}

.header-title {
	letter-spacing: -5px;
	font-family: 'Bitter', serif;
	color: #000000;
	font-size: 60px;;
	text-align: center;
	font-weight: 100;
	margin: 0 auto;
	text-transform: lowercase;
}



.content-header-black{
	background-color: #000000;
}

.content-header-black a{
	text-decoration: none;
}

.header-title-black {

	font-family: 'Bitter', serif;
	color: white;
	font-size: 60px;;
	text-align: center;
	font-weight: 100;
	margin: 0 auto;
	text-transform: lowercase;
}

